--- a/public/css/hci-friends.css
+++ b/public/css/hci-friends.css
@@ -1,6 +1,7 @@
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
 	margin-top: 2em;
+	border-radius: 8px
 }
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
@@ -12,3 +13,4 @@
 h1, h2, h3, h4, h5 {
 	color: #8382BF;
 }
+
