--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,11 +4,36 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="js/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
+</body>
+</html>
 	
 </head>
 
-<body>
+<body >
+	<div class="container">
 	<h1>My HCI Friends</h1>
+	
+	{{#each friends}}
+		<div class="friends" id="{{id}}"> 
+			<a href="friends" class="thumbnail">
+				<img src="{{imageURL}}" alt="imageURL" class="responsive" width="300">
+				<a href="#">
+					<p>{{name}}</p>
+				</a>
+				<p>{{description}}</p>
+			</a>
+		</div>
+	{{/each}}
+
+
+	
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -22,5 +47,5 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
-</body>
+</body >
 </html>
